# html2reader

./: Dockerfile  Makefile  README.md  deploy.sh  docker-compose.yaml  main.py  pyproject.toml  setup.cfg
.github/workflows/: docker-image.yml  linters-and-tests.yml
html2reader/: article_fetcher.py  converter.py  db.py  updater.py
pocket_integration/: settings.py  updater.py
tests/: test_slugify.py
