[tool.poetry]
name = "html2reader"
version = "0.1.0"
description = "Send web pages to reader in fb2"
authors = ["Apollon76 <devcpy@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = ">19.3b0"
flake8-awesome = "<1.3"
mypy = "^0.812"
pytest = "^6.2.4"
pytest-cov = "^2.10.1"

[tool.black]
target-version = ['py38']
line-length = 120

[build-system]
requires = ["poetry>=1.0"]
